--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend for react native p",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd server && node index",
+    "server": "cd server && nodemon index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/MehmetKaldirim/ww-backend/issues"
   },
-  "homepage": "https://github.com/MehmetKaldirim/ww-backend#readme"
+  "homepage": "https://github.com/MehmetKaldirim/ww-backend#readme",
+  "dependencies": {
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
+  }
 }
