--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MehmetKaldirim/ww-backend#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
   }
