--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/MehmetKaldirim/ww-backend#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
 }
